--- a/eUseControl.BeekeepingStore/Views/Shared/_Header.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Shared/_Header.cshtml
@@ -59,7 +59,7 @@
                             <div class="dropdown-menu" aria-labelledby="adminDropdown">
                                 <a class="dropdown-item" href="@Url.Action("Index", "Product")">Manage Products</a>
                                 <a class="dropdown-item" href="@Url.Action("Index", "UserManagement")">Manage Users</a>
-                                <a class="dropdown-item" href="@Url.Action("Index", "OrderManagement")">Manage Orders</a>
+                                <a class="dropdown-item" href="@Url.Action("Index", "AdminOrder")">Manage Orders</a>
                             </div>
                         </li>
                     }
@@ -89,7 +89,7 @@
                             {
                                 <ul class="list-unstyled mb-0">
                                     <li><a class="dropdown-item" href="@Url.Action("Profile", "Account")">My Profile</a></li>
-                                    <li><a class="dropdown-item" href="@Url.Action("OrderHistory", "Account")">My Orders</a></li>
+                                    <li><a class="dropdown-item" href="@Url.Action("History", "Order")">My Orders</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="@Url.Action("Logout", "Account")">Logout</a></li>
                                 </ul>
