--- a/eUseControl.BeekeepingStore/Views/Wishlist/Index.cshtml
+++ b/eUseControl.BeekeepingStore/Views/Wishlist/Index.cshtml
@@ -187,7 +187,7 @@
                 $button.removeClass('btn-primary').addClass('btn-success');
 
                 // Show notification (just once, directly here)
-                //showNotification(productName + ' has been added to your cart!', 'success');
+                showNotification(productName + ' has been added to your cart!', 'success');
 
                 // Reactivate the button after a while
                 setTimeout(function () {
